force-app/main/default/objects/Enrollment_Component__c.object
<CustomObject>
    <description>Every part of a form input, all the way down to a question or field.</description>
    <fields>
        <fullName>API_Mapping__c</fullName>
        <description>This tells us how the mapping occurs from API</description>
        <encryptionScheme>None</encryptionScheme>
        <label>API Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks a question group for Experian QAS Address Verification</description>
        <label>Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Target__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Defines the system location to store the answer to this question. e.g. Household_Income__c.Value__c</inlineHelpText>
        <label>Answer Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Logic__c</fullName>
        <description>Logic for evaluation of the component&apos;s associated criteria groups against each other. If the logic evaluates to true, it indicates that the component is relevant to the program enrollment the evaluation was completed for and it would then be assigned to the PE through a Enrollment Component Affiliation. If there is no assignment logic defined on a component, it inherits it&apos;s assigment from its parent.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please do not enclose the entire expression in parentheses.</inlineHelpText>
        <label>Assignment Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Placement_Runs_on_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Placement Runs on Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Logic__c</fullName>
        <description>Logic for evaluation of the component&apos;s associated criteria groups against each other. If the logic evaluates to true, it indicates that the component has been completed by theprogram enrollment the evaluation was completed for and it would then be marked complete on the shared Enrollment Component Affiliation.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please do not enclose the entire expression in parentheses.</inlineHelpText>
        <label>Completion Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Message__c</fullName>
        <description>Rich text content that can be displayed to users in the context of the component. This field is used by components of the following types: Message, Document, Question. For Messages, this represents the content of the message. For Questions, this is used for help text that is not included as part of the question prompt. For Documents, this provides static instruction text clarifying the document requirements.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Message Content</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <description>Indicator of whether the component relates to student or caretaker (household) program enrollments. This field is used for components of the following types: Flag, Form. All child components of a form should implicitly inherit the type of the form when used in the context of that form.</description>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Caretaker</fullName>
                    <isActive>false</isActive>
                    <label>Caretaker</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_type_of_operation__c</fullName>
        <label>Data type of operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_File_Formats__c</fullName>
        <description>The allowable file formats for the document. Used exclusively for components of type Document.</description>
        <label>Allowable File Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.gif</fullName>
                </value>
                <value>
                    <fullName>.jpeg</fullName>
                </value>
                <value>
                    <fullName>.jpg</fullName>
                </value>
                <value>
                    <fullName>.pdf</fullName>
                </value>
                <value>
                    <fullName>.png</fullName>
                </value>
                <value>
                    <fullName>.tif</fullName>
                </value>
                <value>
                    <fullName>.txt</fullName>
                </value>
                <value>
                    <fullName>.doc</fullName>
                    <isActive>false</isActive>
                    <label>.doc</label>
                </value>
                <value>
                    <fullName>.docx</fullName>
                    <isActive>false</isActive>
                    <label>.docx</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Submission_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Submission End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Submission_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Submission Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Document</label>
        <referenceTo>Enrollment_Document__c</referenceTo>
        <relationshipLabel>Enrollment Components</relationshipLabel>
        <relationshipName>Enrollment_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Provides a way to systematically export and load Enrollment Components.  Unique.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filter_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Filter Logic for determining Criteria resolution. e.g. (1 OR 2) AND 3</inlineHelpText>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Confirmation_Form_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Confirmation Form End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Confirmation_Form_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Confirmation Form Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Semester_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Semester End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Help Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Home_Language_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Language Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Enrollment_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Household Enrollment Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>denotes when a form contains information necessary to calculate student enrollment business logic</description>
        <label>Household Income Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ineligibility_Logic__c</fullName>
        <description>Only used for Process components</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ineligibility Logic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determines whether a particular Enrollment Component is required.</inlineHelpText>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Form: Contains the referencing Label of the form from the CT perspective.
If Question: Contains the content preceding the input.</inlineHelpText>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needed_for_ITR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needed for ITR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needed_for_Re_enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needed for Re-enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAH__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PAH filed on enrollment component</description>
        <label>PAH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Enrollment_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Enrollment Component</label>
        <referenceTo>Enrollment_Component__c</referenceTo>
        <relationshipLabel>Child Enrollment Components</relationshipLabel>
        <relationshipName>Enrollment_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Validated_Field__c</fullName>
        <description>This is the field where we store the result of the phone validation</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the field where we store the result of the phone validation</inlineHelpText>
        <label>Phone Number Validated Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type_Field__c</fullName>
        <description>This is the field where the Type of the phone number is stored</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the field where the Type of the phone number is stored</inlineHelpText>
        <label>Phone Type Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessTree__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProcessTree</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The academic program associated with the component. This is exclusively used by components with a record type of Process to create a relationship between the account entity and it&apos;s required components. As the child components of the process could be used by multiple processes, there is not a direct relationship between them and a specific academic program and those relationships are inferred from their parent process.</description>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enrollment Components (Academic Program)</relationshipLabel>
        <relationshipName>Enrollment_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment_Close_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Enrollment Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Question_Prompt__c</fullName>
        <description>The rich text that provides the content of a question. This could be a question prompt for those that are collecting data, or instructions or clarifying text for questions with a data type of static text.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prompt</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question Read-Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_School_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The school year the question is related to. This can be optionally set to identify question responses as annualized data.</description>
        <label>School Year</label>
        <referenceTo>School_Year__c</referenceTo>
        <relationshipLabel>Enrollment Components</relationshipLabel>
        <relationshipName>Enrollment_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Target__c</fullName>
        <description>The object-field combination that the response to the question should be saved to. Example: Student_Information__c.Final_Grade_Level__c. This field is used exclusively for components of type Question.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <description>The data type of the question. Used exclusively for components of type Document.</description>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Checkbox Group</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>School Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Validation_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Message</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_Validation__c</fullName>
        <description>Configuration of validation that should be applied to the input.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Input Validation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reactivation_Status__c</fullName>
        <description>Part of [US 119348] Full Reactivation.</description>
        <label>Reactivation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_to_Complete_for_Auto_Placement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required to Complete for Auto-Placement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>School End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>School Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_Student_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>School Student End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_Student_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>School Student Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Semester_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Second Semester End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Semester_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Second Semester Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Not Complete</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Enrollment_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Enrollment Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tooltip_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tooltip Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks a stage as the waitlist stage</description>
        <label>Waitlist</label>
        <type>Checkbox</type>
    </fields>
    <label>Enrollment Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Question_Validation__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Question_Prompt__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Default_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Answer_Target__c</field>
            <operation>equals</operation>
            <value>Prior_School__c.SchoolType__c</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Components</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Component_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Components</label>
    </listViews>
    <listViews>
        <fullName>Forms</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Enrollment_Component__c.Form</value>
        </filters>
        <filters>
            <field>Component_Type__c</field>
            <operation>equals</operation>
            <value>Student</value>
        </filters>
        <label>Forms</label>
    </listViews>
    <listViews>
        <fullName>Questions</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Answer_Target__c</columns>
        <columns>Question_Type__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Data_type_of_operation__c</columns>
        <columns>Assignment_Logic__c</columns>
        <columns>Completion_Logic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Enrollment_Component__c.Question_Group</value>
        </filters>
        <label>Questions</label>
    </listViews>
    <listViews>
        <fullName>Sections</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Enrollment_Component__c.Section</value>
        </filters>
        <label>Sections</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Components</pluralLabel>
    <recordTypes>
        <fullName>Document</fullName>
        <active>true</active>
        <label>Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flag</fullName>
        <active>true</active>
        <label>Flag</label>
    </recordTypes>
    <recordTypes>
        <fullName>Form</fullName>
        <active>true</active>
        <label>Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hidden_Input</fullName>
        <active>true</active>
        <label>Hidden Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>Message</fullName>
        <active>true</active>
        <label>Message</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process</fullName>
        <active>true</active>
        <label>Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Question</fullName>
        <active>true</active>
        <label>Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Question_Group</fullName>
        <active>true</active>
        <label>Question Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Section</fullName>
        <active>true</active>
        <label>Section</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stage</fullName>
        <active>true</active>
        <label>Stage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Text</fullName>
        <active>true</active>
        <label>Text</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>NES_Message_Required_When_Waitlist</fullName>
        <active>false</active>
        <errorConditionFormula>AND( LEN(Component_Message__c)= 0 ,Waitlist__c  = true )</errorConditionFormula>
        <errorMessage>Require Component Message Content when waitlist is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NES_Question_Validation_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Question&quot;,
				NOT(ISBLANK(Question_Validation__c)), 
			LEN(Question_Validation_Message__c) = 0)</errorConditionFormula>
        <errorDisplayField>Question_Validation_Message__c</errorDisplayField>
        <errorMessage>A validation message is required when question validation is used</errorMessage>
    </validationRules>
</CustomObject>