force-app/main/default/objects/Enrollment_Component__c/fields/Old_Enrollment_Component__c.field-meta.xml
<CustomField>
    <fullName>Old_Enrollment_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Enrollment Component</label>
    <referenceTo>Enrollment_Component__c</referenceTo>
    <relationshipLabel>Enrollment Components (Old Enrollment Component)</relationshipLabel>
    <relationshipName>Enrollment_Components1</relationshipName>
    <type>Lookup</type>
</CustomField>