force-app/main/default/objects/Enrollment_Component__c/fields/Open_Application__c.field-meta.xml
<CustomField>
    <fullName>Open_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Application</label>
    <type>Checkbox</type>
</CustomField>