force-app/main/default/objects/Enrollment_Component__c/fields/Open_Application_Period__c.field-meta.xml
<CustomField>
    <fullName>Open_Application_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a stage as the Open Application Period stage</description>
    <label>Open Application Period</label>
    <type>Checkbox</type>
</CustomField>