force-app/main/default/objects/Enrollment_Component__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>