force-app/main/default/objects/Enrollment_Component__c/validationRules/NES_Message_Required_When_Waitlist.validationRule-meta.xml
<ValidationRule>
    <fullName>NES_Message_Required_When_Waitlist</fullName>
    <active>false</active>
    <errorConditionFormula>AND( LEN(Component_Message__c)= 0 ,Waitlist__c  = true )</errorConditionFormula>
    <errorMessage>Require Component Message Content when waitlist is checked.</errorMessage>
</ValidationRule>