force-app/main/default/objects/Enrollment_Component__c/validationRules/NES_Question_Validation_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>NES_Question_Validation_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Question&quot;,
				NOT(ISBLANK(Question_Validation__c)), 
			LEN(Question_Validation_Message__c) = 0)</errorConditionFormula>
    <errorDisplayField>Question_Validation_Message__c</errorDisplayField>
    <errorMessage>A validation message is required when question validation is used</errorMessage>
</ValidationRule>