force-app/main/default/objects/Enrollment_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Question_Validation__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Question_Prompt__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Default_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Answer_Target__c</field>
        <operation>equals</operation>
        <value>hed__Program_Enrollment__c.Ever_In_Public_School__c</value>
    </filters>
    <label>All</label>
</ListView>