force-app/main/default/objects/Enrollment_Component__c/listViews/All_Components.listView-meta.xml
<ListView>
    <fullName>All_Components</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Component_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Answer_Target__c</field>
        <operation>equals</operation>
        <value>Annual_Student_Information__c.GiftedProgramRequest_LA_M_S__c</value>
    </filters>
    <label>All Components</label>
</ListView>