force-app/main/default/objects/Enrollment_Component__c/listViews/Forms.listView-meta.xml
<ListView>
    <fullName>Forms</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Enrollment_Component__c.Form</value>
    </filters>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>Student</value>
    </filters>
    <label>Forms</label>
</ListView>