force-app/main/default/objects/Enrollment_Component__c/listViews/Questions.listView-meta.xml
<ListView>
    <fullName>Questions</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Answer_Target__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Data_type_of_operation__c</columns>
    <columns>Assignment_Logic__c</columns>
    <columns>Completion_Logic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Enrollment_Component__c.Question_Group</value>
    </filters>
    <label>Questions</label>
</ListView>