force-app/main/default/objects/Enrollment_Component__c/listViews/Sections.listView-meta.xml
<ListView>
    <fullName>Sections</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Enrollment_Component__c.Section</value>
    </filters>
    <label>Sections</label>
</ListView>